--- a/zero waste.html
+++ b/zero waste.html
@@ -4,67 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Zero-waste!</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
 
-        ul {
-            list-style: none;
-        }
+    <!-- 폰트 적용 : Do Hyeon -->
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Nanum+Myeongjo&display=swap" rel="stylesheet">
 
-        .menu {
-            height: 15%;
-            margin-right: 30px;
-            background-color: rgb(0, 0, 0);
-            float: right;
-            padding: 10px;
-            color: aliceblue;
-            line-height: 25px;
-        }
-
-        #main-img {
-            display: block;
-            margin: 0px auto;
-            width: 55%;
-            border-radius: 50%;
-        }
-
-        footer {
-            width: 100%;
-            height: 150px;
-            ;
-            background-color: black;
-            clear: left;
-            color: aliceblue;
-        }
-
-        .f {
-            display: inline-block;
-            padding: 10px;
-            margin: 0 20px;
-            text-align: center;
-            line-height: 15px;
-        }
-
-        #f1 {
-            position: absolute;
-            left: 75%;
-            bottom: 40%;
-        }
-
-        #f2 {
-            position: absolute;
-            left: 46%;
-            bottom: 35%;
-        }
-
-        #f3 {
-            position: absolute;
-            left: 15%;
-            bottom: 35%;
-        }
-    </style>
+    <!-- 스타일 시트 적용 -->
+    <link rel="stylesheet" href="/main_style.css">
 </head>
 
 <body>
@@ -73,14 +18,14 @@
         <ul>
             <li style="display: inline-block"><img src="/resource/zero-waste.png" alt="로고" width="100px"></li>
             <li class="menu">
-                <h3>도움을 받은 곳</h3>
+                <h2>캠페인 참여</h2>
             </li>
             <!--나중에 태그로 링크 넣기-->
             <li class="menu">
-                <h3>우리의 작은 변화</h3>
+                <h2>우리의 작은 변화</h2>
             </li>
             <li class="menu">
-                <h3>제로 웨이스트란?</h3>
+                <h2>제로 웨이스트란?</h2>
             </li>
 
         </ul>
@@ -111,6 +56,10 @@
                     <li class="f" id="f1"><b>제작기간</b><br>22.06.16 ~ 22.06.20</li>
                     <li class="f" id="f2"><b>제작환경</b><br>Visual Studio Code<br>HTML+CSS</li>
                     <li class="f" id="f3"><b>만든이</b><br>고은지<br>dmswl9782@gmail.com</li>
+                    <li class="f" id="f4">
+                        <b>이미지참조</b><br>Flaction<br>unsplash<br>Pixabay<br>
+                        <br><b>상품참조</b><br>동구밭, 톤28, Lush
+                    </li>
                 </small>
             </ul>
 
