다시 수정하기

--- a/zero waste.html
+++ b/zero waste.html
@@ -16,7 +16,7 @@
     <!-- 맨위 로고 및 메뉴-->
     <nav>
         <ul>
-            <li style="display: inline-block"><img src="/resource/zero-waste.png" alt="로고" width="100px"></li>
+            <li style="display: inline-block" ><img src="/resource/zero-waste.png" alt="로고" width="100px"></li>
             <li class="menu">
                 <h2>캠페인 참여</h2>
             </li>
@@ -25,7 +25,7 @@
                 <h2>우리의 작은 변화</h2>
             </li>
             <li class="menu">
-                <h2>제로 웨이스트란?</h2>
+                <a href="http://221.165.162.199:5500/whatiszw.html" vlink="white"><h2>제로 웨이스트란?</h2></a>
             </li>
 
         </ul>
