모든 페이지 기본 컨텐츠 완성

--- a/메인.html
+++ b/메인.html
@@ -191,13 +191,13 @@
 <body>
     <div class="all">
         <div id="header">
-            <div id="header_1"><img id="logo" src="/resource/zero-waste.png" alt=""></div>
+            <div id="header_1"><a href="http://221.165.162.199:5500/%EB%A9%94%EC%9D%B8.html"><img id="logo" src="/resource/zero-waste.png" alt=""></a></div>
             <div id="header_2"></div>
             <div class="nav">
                 <ul>
                     <li><a href="http://221.165.162.199:5500/%EC%A0%9C%EB%A1%9C%EC%9B%A8%EC%9D%B4%EC%8A%A4%ED%8A%B8%EB%9E%80.html"
                             id="menu1">제로웨이스트란?</a></li>
-                    <li><a href="" id="menu2">우리가 할 수 있는 일</a></li>
+                    <li><a href="http://221.165.162.199:5500/%EC%9A%B0%EB%A6%AC%EA%B0%80%ED%95%A0%EC%88%98%EC%9E%88%EB%8A%94%EC%9D%BC.html" id="menu2">우리가 할 수 있는 일</a></li>
                     <li><a href="" id="menu3">캠페인</a></li>
                 </ul>
             </div>
