코드 오토 포맷팅 : 최종

--- a/제로웨이스트란.html
+++ b/제로웨이스트란.html
@@ -16,15 +16,10 @@
             list-style: none;
         }
 
-        div {
-            box-sizing: border-box;
-        }
-
         .all {
             margin: auto;
             width: 1600px;
             height: 1600px;
-
         }
 
         /* 모든 요소 100% */
@@ -56,13 +51,10 @@
         #footer>div {
             height: 100%;
             float: left;
-
-
         }
 
         .nav {
             width: 40%;
-
         }
 
         #header_1 {
@@ -75,7 +67,6 @@
 
         #content_1 {
             width: 10%;
-
         }
 
         #content_2 {
@@ -107,10 +98,8 @@
         }
 
         .nav {
-
             list-style-type: none;
             height: 100%;
-
             padding: 0px;
             margin: 0px;
         }
@@ -123,7 +112,6 @@
         }
 
         .nav a {
-
             padding: 20px;
             background-color: black;
             font-family: 'Do Hyeon', sans-serif;
@@ -135,21 +123,16 @@
             display: block;
             width: 100%;
             height: 100%;
-
         }
 
         .nav a:hover {
             background-color: darkgreen;
-
-
         }
 
         #text1 {
             padding-left: 180px;
             padding-right: 100px;
             font-size: smaller;
-
-
         }
 
         #zero1 {
@@ -166,24 +149,20 @@
         .caption-list {
             margin-left: 90px;
             padding-left: 50px;
-
         }
 
         .caption-list>li {
-
             display: inline;
         }
 
         #img3_3 {
             width: 320px;
-
         }
 
         #img2_2 {
             margin-left: 20px;
             margin-right: 20px;
             width: 350px;
-
         }
 
         #d1 {
@@ -227,7 +206,6 @@
             /* 화면에 보이지 않게 */
             transition: all 0.6s ease-in-out;
             /* 나타날 때 부드럽게 트랜지션 추가 */
-
         }
 
         .pro-list li:hover .caption {
@@ -261,7 +239,7 @@
     <div class="all">
         <div id="header">
             <div id="header_1"><a href="http://221.165.162.199:5500/%EB%A9%94%EC%9D%B8.html"><img id="logo"
-                        src="/resource/zero-waste.png" alt=""></a></div>
+                        src="/resource/zero-waste.png" alt="로고"></a></div>
             <div id="header_2"></div>
             <div class="nav">
                 <ul>
@@ -284,30 +262,26 @@
                     <br>제로 웨이스트 활동가들은 일회용품을 줄이고 재사용 제품과 친환경 제품을 적극 이용하여 필요 이상의 폐기물이 나오지 않도록 노력하고 있죠!<br>점점 이런 활동가들이 늘어가고
                     있는 추세입니다.
                     그 이유는 무엇일까요?
-
                 </p>
 
                 <div id="container">
                     <ul class="pro-list">
                         <li>
-                            <img src="/resource/joshua-woroniecki--L9Ek3MS_rc-unsplash.jpg">
+                            <img src="/resource/joshua-woroniecki--L9Ek3MS_rc-unsplash.jpg" alt="기후위기">
                             <div class="caption">
                                 <h2>기후위기</h2>
-
                             </div>
                         </li>
                         <li>
-                            <img src="/resource/nick-fewings--2lJGRIY5P0-unsplash - 복사본.jpg">
+                            <img src="/resource/nick-fewings--2lJGRIY5P0-unsplash - 복사본.jpg" alt="플라스틱">
                             <div class="caption">
                                 <h2>재활용되지 않는 플라스틱</h2>
-
                             </div>
                         </li>
                         <li>
-                            <img src="/resource/naja-bertolt-jensen-BJUoZu0mpt0-unsplash - 복사본.jpg">
+                            <img src="/resource/naja-bertolt-jensen-BJUoZu0mpt0-unsplash - 복사본.jpg" alt="해양쓰레기">
                             <div class="caption">
                                 <h2>해양쓰레기</h2>
-
                             </div>
                         </li>
                     </ul>
@@ -318,7 +292,6 @@
                     <p id="text1">폭우와 폭설, 혹서와 혹한. 지금 이 순간에도 기후위기의 징후는 온 지구에서 나타나고 있습니다. <br>매년 지구는 심각한 환경문제를 일으켜 이제 우리의
                         생활까지 위협해온 상황입니다. 바로 우리가 무심코 버린 쓰레기와 낭비되는 자원 때문이죠.
                         이 책임없는 소비는 많은 생물들과 동물들의 터전을 빼앗아 지구의 공기와 환경을 오염시켜 결국 우리의 삶까지도 지속 가능하지 못할 미래로 인도할 것입니다.
-
                     </p>
                 </div>
                 <div id="content2">
@@ -329,7 +302,6 @@
                         쓰레기의 3분의 1은 대형 플라스틱이며 그 중 89%는 일회용 제품에서 발생한 것이죠.
                         수심 6000m 보다 깊은 곳도 반 이상이 플라스틱으로 덮여 있었고 대부분이 일회용 플라스틱이었다고 합니다. 이제 일회용 플라스틱은 상상을 초월할 정도로 널리 퍼져있습니다.
                         <br>이 플라스틱은 바다로 흘러가 분해되기까지는 약 1000년의 세월이 걸립니다.
-
                     </p>
                 </div>
                 <div id="content3">
@@ -337,9 +309,7 @@
                     <p id="text1"><i>'환경오염으로 지구가 위험하다고? 글쎄 내가 죽기 전에는 괜찮지 않을까?'</i><br>우리 주변에서 쉽게 들을 수 있는 말입니다. 정말로 당신이
                         살아있는 동안에는 괜찮아 보일지도 모르죠. 하지만 우리가 무분별하게 버린 쓰레기로 미래의 우리. 그리고 많은 생명들의 터전과 목숨을 앗아간다고 생각해보세요. 그때에는
                         누구에게 책임을 물을 수 있을까요?
-
                     </p>
-
                 </div>
                 <div id="d1">출처 : 위키백과, 천지일보-[환경칼럼] 플라스틱은 어떻게 지구를 오염시키고 있을까?</div>
             </div>
