--- a/메인.html
+++ b/메인.html
@@ -16,28 +16,20 @@
             list-style: none;
         }
 
-
-
-        div {
-            box-sizing: border-box;
-        }
-
         .all {
             margin: auto;
             width: 1600px;
             height: 1000px;
-            ;
         }
 
         /* 모든 요소 100% */
-        .all>div {
+        .all > div {
             width: 100%;
         }
 
         #header {
             height: 15%;
             /* position: fixed; */
-
         }
 
         #content {
@@ -52,8 +44,6 @@
             font-size: small;
             line-height: auto;
             padding-top: 5px;
-           
-
         }
 
         #header>div,
@@ -61,8 +51,6 @@
         #footer>div {
             height: 100%;
             float: left;
-
-
         }
 
         .nav {
@@ -115,7 +103,6 @@
 
             list-style-type: none;
             height: 100%;
-
             padding: 0px;
             margin: 0px;
         }
@@ -145,22 +132,17 @@
 
         .nav a:hover {
             background-color: darkgreen;
-
-
         }
 
         #main-img {
             display: block;
             margin: 0px auto;
             height: 70%;
-
-
             width: 45%;
             border-radius: 100%;
         }
 
         #main-img:hover {
-
             transition: 3s;
             transform: scale(1.3);
         }
@@ -169,7 +151,6 @@
             text-align: center;
             margin: auto;
             padding: 25px;
-
         }
 
         #t2 {
@@ -177,8 +158,8 @@
             bottom: 10px;
             margin: auto;
             padding: 25px;
-
         }
+
         #btnPlay {
             width: 28%;
             margin-top: 670px;
@@ -186,7 +167,6 @@
         }
     </style>
     <script>
-        
         var audio = new Audio('/resource/Afterschool.mp3');
     </script>
 </head>
@@ -194,7 +174,7 @@
 <body>
     <div class="all">
         <div id="header">
-            <div id="header_1"><a href="http://221.165.162.199:5500/%EB%A9%94%EC%9D%B8.html"><img id="logo" src="/resource/zero-waste.png" alt=""></a></div>
+            <div id="header_1"><a href="http://221.165.162.199:5500/%EB%A9%94%EC%9D%B8.html"><img id="logo" src="/resource/zero-waste.png" alt="로고"></a></div>
             <div id="header_2"></div>
             <div class="nav">
                 <ul>
