--- a/메인.html
+++ b/메인.html
@@ -123,10 +123,10 @@
         .nav li {
 
 
-            padding: 20px;
+            /* padding: 20px; */
 
-            height: 100%;
-            margin: 25px 10px;
+            /* height: 100%; */
+            margin: 25px 18px;
             display: block;
             text-align: center;
             float: left;
@@ -136,7 +136,10 @@
         }
 
         .nav a {
-
+           
+            padding: 15px;
+            background-color: black;
+            box-sizing: content-box;
             font-family: 'Do Hyeon', sans-serif;
             text-decoration: none;
             font-size: 25px;
@@ -144,7 +147,7 @@
             line-height: 20px;
             color: azure;
             display: block;
-            width: 100%;
+            width: 90%;
             height: 100%;
 
         }
@@ -185,6 +188,8 @@
             padding: 25px;
 
         }
+
+        
     </style>
 </head>
 
